fix the align-items with nestede message

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@
   border-radius: 5px;
   display: flex;
   gap: 10px;
-  align-items: center;
+  align-items: start;
   padding: 1em;
 }
 .content p {
